@startuml commerceErd

entity Customer {
  + CustomerId : String
  --
  Name : String
  Email : String
  PhoneNumber : String
  Address : String
  Gender : String
  Username : String
  Password : String
}

entity Cart {
  + CartId : String
  --
  # CustomerId : String
  CreatedAt : Date
  UpdatedAt : Date
  CartStatus : String
}

entity CartItem {
  + CartItemId : String
  --
  # CartId : String
  # ProductId : String
  Quantity : int
  Price : Number
}

entity Product {
  + ProductId : String
  --
  # AgencyId : String
  Name : String
  Description : String
  Price : Number
  StockQuantity : int
}

entity Transaction {
  + TransactionId : String
  --
  # CustomerId : String
  # AgencyId : String
  # CartId : String
  TransactionDate : Date
  Status : String
  TotalAmount : Number
}

entity Billing {
  + BillingId : String
  --
  # TransactionId : String  
  Amount : Number
  BillingDate : Date
  PaymentStatus : String
}

entity Agency {
  + AgencyId : String
  --
  Name : String
  Email : String
  PhoneNumber : String
  Address : String
  Gender : String
  # AdminId : String
}

entity Admin {
  + AdminId : String
  --
  Name : String
  Email : String
  Username : String
  Password : String
}

Customer ||--o{ Cart : "1 - n"
Customer ||--o{ Transaction : "1 - n"
Cart ||--|{ CartItem : "1 - n"
Product ||--o{ CartItem : "1 - n"
Transaction ||--|| Cart : "1 - 1"
Transaction ||--|| Billing : "1 - 1"

Agency ||--|{ Product : "1 - n"
Agency ||--o{ Transaction : "1 - n"
Admin ||--|{ Agency : "1 - n"

@enduml
